Fixed issue with stretching images on the post components

--- a/src/components/post-large/_post-large.scss
+++ b/src/components/post-large/_post-large.scss
@@ -15,10 +15,11 @@
 
   &__image {
     display: block;
-    width: 100%;
 
     img {
       height: 204px;
+      width: 100%;
+      object-fit: cover;
       @media screen and (min-width: 1240px) {
         height: 240px;
       }
